# Newtonium_core

./: README.md
core/: .gitignore  Cargo.toml  build.sh  build_linux.sh  build_windows.sh
core/scripts/: build-windows.sh
core/src/: ipc.rs  lib.rs  main.rs  window.rs
core/src/commands/: add_event_listener.rs  append_child.rs  create_element.rs  g_create_program.rs  get_attribute.rs  insert_before.rs  mod.rs  remove_element.rs  set_attribute.rs  set_styles.rs
core/src/dom/: mod.rs
core/src/elements/: button.rs  canvas.rs  image.rs  input.rs  mod.rs  text.rs  view.rs  webview.rs
core/src/ffi/: add_event_listener.rs  append_child.rs  create_callback.rs  create_element.rs  create_window.rs  g_create_program.rs  get_attribute.rs  get_var_pointer.rs  initialize.rs  insert_before.rs  mod.rs  remove_element.rs  run.rs  set_attribute.rs  set_styles.rs
core/src/graphics/: coordinates.rs  mod.rs  program.rs  shader.rs
core/src/graphics/canvas/: clear.rs  line.rs  mod.rs  rectangle.rs  vertices.rs
core/src/units/: length.rs
core/src/utils/: channel.rs  datatype.rs  element.rs  mod.rs  pointer.rs
lib/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
lib/src/: entrypoint.ts  ffi.ts  index.ts  worker.ts
lib/src/binaries/: newtonium
lib/src/dom/: document.ts  element.ts  window.ts
lib/src/utils/: color.ts  css_transformer.ts  id.ts
lib/src/workers/: runner.ts
ogl/: Cargo.toml
ogl/src/: main.rs
