[package]
name = "newtonium"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
gdk = "0.18.0"
gtk = "0.18.1"
lazy_static = "1.5.0"
libc = "0.2.161"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
serde_json = "1.0.132"
tungstenite = "0.24.0"
uuid = { version = "1.11.0", features = ["v4"] }

[lib]
crate-type = ["cdylib"]
