[package]
name = "newtonium"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
crossbeam-channel = "0.5.13"
epoxy = "0.1.0"
futures = "0.3.31"
gdk = "0.18.0"
gl = "0.14.0"
glfw = "0.58.0"
gtk = "0.18.1"
lazy_static = "1.5.0"
libc = "0.2.161"
libloading = "0.8.5"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }

[lib]
crate-type = ["cdylib"]
